<resources>
    <!-- app name -->
    <string name="app_name" translatable="false">piled-client</string>

    <!-- text buttons -->
    <string name="btn_red">RED</string>
    <string name="btn_green">GREEN</string>
    <string name="btn_blue">BLUE</string>
    <string name="btn_orange">ORANGE</string>
    <string name="btn_turquoise">TURQUOISE</string>
    <string name="btn_purple">PURPLE</string>
    <string name="btn_yellow">YELLOW</string>
    <string name="btn_black">BLACK</string>
    <string name="btn_white">WHITE</string>
    <string name="btn_fade" translatable="false">FADE</string>

    <!-- text switches -->
    <string name="sw_function_leds">Off-On</string>
    <string name="sw_name_onoff" translatable="false">LEDs</string>
    <string name="sw_function_sleep">Off-On</string>
    <string name="sw_name_sleep">Sleep</string>
    <string name="sw_function_officelight">Off-On</string>
    <string name="sw_name_officelight">Office</string>



</resources>