<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- RED -->
    <Button
        android:id="@+id/btn_red"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_red"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/ubuntu_light"
        android:text="@string/btn_red"
        android:textColor="@color/text_light"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sw_officelight_background" />

    <!-- GREEN -->
    <Button
        android:id="@+id/btn_green"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_green"
        android:fontFamily="@font/ubuntu_light"
        android:text="@string/btn_green"
        android:textColor="@color/text_dark"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_red" />

    <!-- BLUE -->
    <Button
        android:id="@+id/btn_blue"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_blue"
        android:fontFamily="@font/ubuntu_light"
        android:text="@string/btn_blue"
        android:textColor="@color/text_light"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_green" />

    <!-- ORANGE -->
    <Button
        android:id="@+id/btn_orange"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_orange"
        android:fontFamily="@font/ubuntu_light"
        android:text="@string/btn_orange"
        android:textColor="@color/text_dark"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_red" />

    <!-- TURQUOISE -->
    <Button
        android:id="@+id/btn_turquoise"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_turquoise"
        android:fontFamily="@font/ubuntu_light"
        android:text="@string/btn_turquoise"
        android:textColor="@color/text_dark"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_green" />

    <!-- PURPLE -->
    <Button
        android:id="@+id/btn_purple"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_purple"
        android:fontFamily="@font/ubuntu_light"
        android:text="@string/btn_purple"
        android:textColor="@color/text_light"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_blue" />

    <!-- YELLOW -->
    <Button
        android:id="@+id/btn_yellow"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_yellow"
        android:fontFamily="@font/ubuntu_light"
        android:text="@string/btn_yellow"
        android:textColor="@color/text_dark"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_orange" />

    <!-- BLACK -->
    <Button
        android:id="@+id/btn_black"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_black"
        android:fontFamily="@font/ubuntu_light"
        android:text="@string/btn_black"
        android:textColor="@color/text_light"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_turquoise" />

    <!-- WHITE -->
    <Button
        android:id="@+id/btn_white"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_white"
        android:fontFamily="@font/ubuntu_light"
        android:text="@string/btn_white"
        android:textColor="@color/text_dark"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_purple" />

    <!-- on-off switch background -->
    <View
        android:id="@+id/sw_onoff_background"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/onoff_background_states"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- sleep switch background -->
    <View
        android:id="@+id/sw_sleep_background"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/onoff_background_states"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sw_onoff_background" />

    <!-- officelight switch background -->
    <View
        android:id="@+id/sw_officelight_background"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/onoff_background_states"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sw_sleep_background" />

    <!-- on-off switch -->
    <Switch
        android:id="@+id/sw_onoff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_above="@id/sw_onoff_background"
        android:fontFamily="@font/ubuntu_light"
        android:minWidth="120dp"
        android:minHeight="50dp"
        android:track="@drawable/switch_states"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <!-- sleep switch -->
    <Switch
        android:id="@+id/sw_sleep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/sw_onoff_background"
        android:fontFamily="@font/ubuntu_light"
        android:minWidth="120dp"
        android:minHeight="50dp"
        android:track="@drawable/switch_states"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="@+id/sw_sleep_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_totOPOf="@+id/sw_onoff_background"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <!-- office light switch -->
    <Switch
        android:id="@+id/sw_officelight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/sw_officelight_background"
        android:fontFamily="@font/ubuntu_light"
        android:minWidth="120dp"
        android:minHeight="50dp"
        android:track="@drawable/switch_states"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="@+id/sw_officelight_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sw_officelight_background"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <!-- on-off switch text-->
    <TextView
        android:id="@+id/sw_onoff_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:layout_above="@id/sw_onoff_background"
        android:fontFamily="@font/ubuntu_light"
        android:text="@string/sw_onoff"
        android:textColor="@color/text_dark"
        app:layout_constraintBottom_toBottomOf="@+id/sw_onoff"
        app:layout_constraintEnd_toEndOf="@+id/sw_onoff"
        app:layout_constraintTop_toTopOf="@+id/sw_onoff" />


</androidx.constraintlayout.widget.ConstraintLayout>